--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,7 +33,7 @@
     --gradient-2: linear-gradient(180deg, hsla(260, 5%, 12%, 0) 0%, hsla(260, 5%, 12%, 0.8) 65%, hsl(260, 5%, 12%) 100%);
 
     --ff-nunito-sans: 'Nunito Sans', sans-serif;
-
+    --me: #f76767;
     --heading: 5.6rem;
     --title-1: 2rem;
     --title-2: 1.8rem;
