--- a/src/css/style.css
+++ b/src/css/style.css
@@ -117,6 +117,16 @@ a:hover {
     color: #fff;
 }
 
+#smSearch {
+    background: transparent;
+    position: absolute;
+    z-index: 100;
+    height: 40px;
+    transform: translate(-200px, 40px);
+    border-radius: 12px;
+    border: 1px solid white;
+}
+
 .search-wrapper input:focus {
     outline: none;
 }
